Added Question paper get

--- a/Infinito-Qs/QuestionManagement/public/QuestionManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionManager.html
@@ -421,7 +421,7 @@
       </div>
     </div>
 
-    <script type="text/ng-template" id="tempModal.html">
+    <script type="text/ng-template" id="savePatternModal.html">
       <div class="modal-header">
           <h3 class="modal-title">Give a name</h3>
       </div>
@@ -434,7 +434,7 @@
           <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
           <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
       </div>
-    </script>\
+    </script>
 
     <script type="text/ng-template" id="qpSaveModal.html">
       <div class="modal-header">
