--- a/Infinito-Qs/QuestionManagement/public/questionModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionModal.html
@@ -1,6 +1,9 @@
 <div class="modal-header">
   <button type="button" class="close" ng-click="editQuestionClose()" aria-hidden="true">&times;</button>
   <h4 class="modal-title">{{QuestionPaper.name}}</h4>
+  <div class="form-inline pull-right wrapper">
+    <label for="createdOn">{{Questions.Count}}</label>
+  </div>
 </div>
 <div class="modal-body">
 
@@ -29,6 +32,8 @@
 </div>
 
 <div class="wrap" ng-hide="!Questions.length">
+  <div class="form-inline">
+  <label>Questions :</label><br/>
   <table class="table table-bordered" >
     <thead>
       <tr>
@@ -51,6 +56,7 @@
       </tr>
     </tbody>
   </table>
+</div>
 </div>
 
 <div class="modal-footer">
