Changes to have range for difficulty Level; basic search UI changes

--- a/Infinito-Qs/QuestionManagement/public/QuestionManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionManager.html
@@ -222,7 +222,7 @@
         <button type="button" class="btn btn-success col-sm-2 col-xs-2" ng-click="onSearch()" name="button"><span class="glyphicon glyphicon-search"></span> Search</button>
         <button type="reset" class="btn btn-default col-sm-2 col-xs-2" ng-click="onReset()"><span class="glyphicon glyphicon-remove"></span> Clear </button>
       </form>
-      <div id='noOfQuestions' uib-dropdown class='col-sm-3 col-xs-3 actionBar'>
+      <div id='noOfQuestions' uib-dropdown class='col-sm-2 col-xs-2 actionBar pull-right'>
         <button uib-dropdown-toggle class="btn btn-default" type="button">
           {{noOfQuestions[selectedRowCountIndex]}}
           <span class="caret"></span></button>
@@ -255,35 +255,31 @@
           <div id="metaData" ng-show="showMoreSearchOptions">
           <hr>
 
-           <div id="difficultyLevel" class="form-group col-sm-2 col-xs-2">
+           <div id="difficultyLevel" class="form-group col-sm-3 col-xs-3">
              DifficultyLevel:
              <span id="DifficultyLevelHelper" popover-title="Difficulty Level Of Questions" uib-popover-html="difficultyLevelHelperHtml" popover-placement="right" popover-append-to-body="true" popover-trigger="mouseenter" class="glyphicon glyphicon-question-sign"> </span>
-             <span class="tooltipWrap" uib-tooltip="Enter 0 to Disable DifficultyLevel in Search" tooltip-trigger="mouseenter" tooltip-placement="top" tooltip-enable="searchWith.difficultyLevelValue">
-                <select class="form-control" ng-model="searchWith.difficultyLevelValue" ng-options="opt for opt in difficultyLevels"> </select>
-             </span>
+              <span title="reset" id="difficultyReset" class="glyphicon glyphicon-remove-sign" ng-click="rangeReset('difficulty')"> </span>
+               <rzslider rz-slider-model="searchWith.difficultyRange.min" rz-slider-high="searchWith.difficultyRange.max" rz-slider-options=rangeOptions ng-click="rangeSelected('difficulty')"> </rzslider>
            </div>
-           <div id="wikiLevel" class="form-group col-sm-2 col-xs-2">
+           <div id="wikiLevel" class="form-group col-sm-3 col-xs-3">
               WikiRank:
               <span id="WikiHelper" uib-popover-html="wikiHelperHtml" popover-title="Wiki Rank Of Questions" popover-placement="right" popover-trigger="mouseenter" popover-append-to-body="true" class="glyphicon glyphicon-question-sign"> </span>
-              <span class="tooltipWrap" uib-tooltip="Enter 0 to Disable Wiki Rank in Search" tooltip-trigger="mouseenter" tooltip-placement="top" tooltip-enable="currentWikiLevel">
+              <span title="reset" id="WikiReset" class="glyphicon glyphicon-remove-sign" ng-click="rangeReset('wiki')"> </span>
+              <!--<span class="tooltipWrap" uib-tooltip="Enter 0 to Disable Wiki Rank in Search" tooltip-trigger="mouseenter" tooltip-placement="top" tooltip-enable="currentWikiLevel">
                 <select class="form-control" ng-model="currentWikiLevel" ng-options="opt for opt in difficultyLevels" ng-change="rangeSelected('wiki')">  </select>
-              </span>
+              </span> -->
+              <rzslider rz-slider-model="searchWith.wikiRange.minRank" rz-slider-high="searchWith.wikiRange.maxRank" rz-slider-options=rangeOptions ng-click="rangeSelected('wiki')"> </rzslider>
            </div>
 
-           <div id = "GoogleLevel" class="form-group col-sm-2 col-xs-2" >
+           <div id = "GoogleLevel" class="form-group col-sm-3 col-xs-3" >
              GoogleRank:
             <span id="GoogleHelper" uib-popover-html="googleHelperHtml" popover-title="Google Rank of Questions" popover-placement="right" popover-trigger="mouseenter" popover-append-to-body="true" class="glyphicon glyphicon-question-sign"> </span>
-            <span class="tooltipWrap" uib-tooltip="Enter 0 to Disable GoogleRank in Search" tooltip-trigger="mouseenter" tooltip-placement="top" tooltip-enable="currentGoogleLevel">
-              <select class="form-control" ng-model="currentGoogleLevel" ng-options="opt for opt in difficultyLevels" ng-change="rangeSelected('google')"></select>
-            </span>
+              <span title="reset" id="googleReset" class="glyphicon glyphicon-remove-sign" ng-click="rangeReset('google')"> </span>
+            <rzslider rz-slider-model="searchWith.googleRange.minRank" rz-slider-high="searchWith.googleRange.maxRank" rz-slider-options=rangeOptions ng-click="rangeSelected('google')"> </rzslider>
            </div>
 
          </div> <!-- End of MetaData-->
         </form>
-
-        <!-- <button type="button" ng-click="buttonclick()" class="pull-right">More Questions</button> -->
-
-        <!-- <button type="button" ng-click="questionpaper()" class="pull-right">Questionpaper</button> -->
     </div>
     <div class="questions nga-default nga-slide-up" ng-show="isBasic||isPattern">
       <div id="questionContainer" class="row">
