New Question Paper Addition Bug Fixes Dne

--- a/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
@@ -10,7 +10,7 @@
 
     <div class="form-group">
       <label for="QuestionPaperName">Name: </label><strong class="required text-danger">*</strong>
-      <input type="text" class="form-control" name="QuestionPaperName" value={{QuestionPaper.name}} required>
+      <input type="text" class="form-control" ng-model="QuestionPaper.name" value={{QuestionPaper.name}} required>
     </input>
   </div>
 
