--- a/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
@@ -36,12 +36,12 @@
     </div>
   </div>
 
-  <div class="wrap" ng-hide="!QuestionPaper.Questions.length">
+  <div class="wrap" ng-hide="!QuestionPaper.questions.length">
     <div class="form-inline">
       <label>Questions :</label><br/>
       <table class="table table-hover table-responsive nga-default nga-stagger nga-slide-up" >
         <tbody class="table">
-          <tr id="{{Question.questionId}}" ng-repeat="Question in QuestionPaper.Questions" value="{{Question.questionId}}"  ng-checked="selectedQuestionIndices.indexOf($index) > -1" ng-click="toggleSelection($index)">
+          <tr id="{{Question.questionId}}" ng-repeat="Question in QuestionPaper.questions" value="{{Question.questionId}}"  ng-checked="selectedQuestionIndices.indexOf($index) > -1" ng-click="toggleSelection($index)">
             <td><input type="checkbox" align="left" ></td>
             <td>{{Question.question}}</td>
             <td>
