--- a/Infinito-Qs/QuestionManagement/public/QuestionManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionManager.html
@@ -78,7 +78,6 @@
                           <a class="btn btn-danger btn-sm" ng-click="removeField()"><b>-</b></a>
                         </span>
                     </div>
-                    {{regexPatterns}}
                   </div>
                 </uib-accordion-group>
                 <uib-accordion-group is-open="wikiCheck.open">
@@ -309,7 +308,7 @@
             <form class="form-inline col-sm-4 col-xs-6">
               <select class="form-control" ng-model="qpSelect" ng-change="onQuestionPaperSelect()">
                 <option value="">New Question Paper</option>
-                <option ng-repeat="questionPaper in QuestionPapers" value="{{questionPaper.name}}">
+                <option ng-repeat="questionPaper in QuestionPapers" value="{{questionPaper._id}}">
                   {{questionPaper.name}}
                 </option>
               </select>
