Notification Message Added For Each Q-Set Event

--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="stylesheets/lib/nga.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-minimal.css"/>
   <link rel="icon" href="stylesheets/favicon.ico"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.css"/>
   <!-- Custom Style sheet -->
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
@@ -26,6 +27,8 @@
   <script src="javascripts/lib/angular-animate.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/pace.min.js"></script>
   <!-- Angular range slider -->
+
+  <script src="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.js"></script>
   <script src="javascripts/lib/rzslider.min.js"></script>
   <script src="javascripts/lib/ng-tags-input.min.js"></script>
   <script src="javascripts/lib/ui-bootstrap-tpls-1.1.2.min.js" charset="utf-8"></script>
