--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pace/1.0.2/themes/blue/pace-theme-minimal.css"/>
   <link rel="icon" href="stylesheets/favicon.ico"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.css"/>
+  <link rel="stylesheet" href="stylesheets/lib/ngToast.min.css"/>
   <!-- Custom Style sheet -->
   <link rel="stylesheet" href="stylesheets/QuestionManager.css" />
 
@@ -34,6 +35,8 @@
   <script src="javascripts/lib/ui-bootstrap-tpls-1.1.2.min.js" charset="utf-8"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
   <base href="/">
+  <script src="javascripts/lib/angular-sanitize.min.js"></script>
+  <script src="javascripts/lib/ngToast.min.js"></script>
 </head>
 <body>
   <nav class="navbar navbar-default navbar-fixed">
@@ -58,7 +61,7 @@
     </div>
   </nav>
   <div ng-view=""> </div>
-
+  <toast></toast>
   <script src="javascripts/lib/paging.js" charset="utf-8"></script>
   <script src="javascripts/angular_app.js"></script>
   <script src="javascripts/Controllers/indexController.js"> </script>
