--- a/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
@@ -2,7 +2,7 @@
   <div class="modal-header">
     <button type="button" class="close" ng-click="editQuestionClose()" aria-hidden="true">&times;</button>
     <h4 class="modal-title">{{QuestionPaper.name}}</h4>
-    <div class="form-inline pull-right wrapper">
+    <div class="form-inline pull-right wrapper" ng-show=!QuestionPaper.isCreateMode>
       <label for="createdOn">Created Dated:</label>
       <label class='divider' name="createdOn"><em>{{dateFormater(QuestionPaper.createdDate) | date:'MM/dd/yyyy'}}</em></label>
       <label for="lastEdited">Last Edited:</label>
@@ -10,51 +10,52 @@
       <input type="hidden" id="lastEdited" name="lastEdited" value="{{selectedQuestion.lastEdited}}"/>
     </div>
   </div>
-  <div class="modal-body">
+  <div class="modal-body row">
+    <div class="col-lg-12">
+      <div class="form-group">
+        <label for="QuestionPaperName">Name: </label><strong class="required text-danger">*</strong>
+        <input type="text" class="form-control" ng-model="QuestionPaper.name" value={{QuestionPaper.name}} required>
+      </input>
+    </div>
 
-    <div class="form-group">
-      <label for="QuestionPaperName">Name: </label><strong class="required text-danger">*</strong>
-      <input type="text" class="form-control" ng-model="QuestionPaper.name" value={{QuestionPaper.name}} required>
-    </input>
-  </div>
-
-  <div class="wrap" ng-if="QuestionPaper.topics.length > 0">
-    <div class="form-inline">
-      <label for="topicId">Topics:</label><br/>
-      <div ng-repeat="topic in QuestionPaper.topics" class="well well-sm topics">
-        {{topic}}
+    <div class="wrap" ng-if="QuestionPaper.topics.length > 0">
+      <div class="form-inline">
+        <label for="topicId">Topics:</label><br/>
+        <div ng-repeat="topic in QuestionPaper.topics" class="well well-sm topics">
+          {{topic}}
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="wrap" ng-if="QuestionPaper.tournaments.length > 0">
-    <div class="form-inline">
-      <label for="topicId">Tournaments Used :</label><br/>
-      <div ng-repeat="tournament in QuestionPaper.tournaments" class="well well-sm topics">
-        {{tournament}}
+    <div class="wrap" ng-if="QuestionPaper.tournaments.length > 0">
+      <div class="form-inline">
+        <label for="topicId">Tournaments Used :</label><br/>
+        <div ng-repeat="tournament in QuestionPaper.tournaments" class="well well-sm topics">
+          {{tournament}}
+        </div>
       </div>
     </div>
-  </div>
 
-  <div class="wrap" ng-hide="!QuestionPaper.questions.length">
-    <div class="form-inline">
-      <label>Questions :</label><br/>
-      <table class="table table-hover table-responsive nga-default nga-stagger nga-slide-up" >
-        <tbody class="table">
-          <tr id="{{Question.questionId}}" ng-repeat="Question in QuestionPaper.questions" value="{{Question.questionId}}"  ng-checked="selectedQuestionIndices.indexOf($index) > -1" ng-click="toggleSelection($index)">
-            <td><input type="checkbox" align="left" ></td>
-            <td>{{Question.question}}</td>
-            <td>
-              <button type="button" class="btn btn-xs btn-default command-edit"  ng-click ="onEditClick($index)" title="Edit Question Paper">
-                <span class="glyphicon glyphicon-pencil"></span>
-              </button>
-              <button type="button" class="btn btn-xs btn-default command-delete"  ng-click ="selectQuestion($index,true);deleteQuestions()" title="Remove Question">
-                <span class="glyphicon glyphicon-trash"></span>
-              </button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="wrap" ng-hide="!QuestionPaper.questions.length">
+      <div class="form-inline">
+        <label>Questions :</label><br/>
+        <table class="table table-hover table-responsive nga-default nga-stagger nga-slide-up" >
+          <tbody class="table">
+            <tr id="{{Question.questionId}}" ng-repeat="Question in QuestionPaper.questions" value="{{Question.questionId}}"  ng-checked="selectedQuestionIndices.indexOf($index) > -1" ng-click="toggleSelection($index)">
+              <td><input type="checkbox" align="left" ></td>
+              <td>{{Question.question}}</td>
+              <td>
+                <button type="button" class="btn btn-xs btn-default command-edit"  ng-click ="onEditClick($index)" title="Edit Question Paper">
+                  <span class="glyphicon glyphicon-pencil"></span>
+                </button>
+                <button type="button" class="btn btn-xs btn-default command-delete"  ng-click ="selectQuestion($index,true);deleteQuestions()" title="Remove Question">
+                  <span class="glyphicon glyphicon-trash"></span>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
