--- a/Infinito-Qs/QuestionManagement/public/index.html
+++ b/Infinito-Qs/QuestionManagement/public/index.html
@@ -30,6 +30,7 @@
   <!-- Angular range slider -->
 
   <script src="https://cdn.jsdelivr.net/angular.ng-notify/0.6.0/ng-notify.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.js"></script>
   <script src="javascripts/lib/rzslider.min.js"></script>
   <script src="javascripts/lib/ng-tags-input.min.js"></script>
   <script src="javascripts/lib/ui-bootstrap-tpls-1.1.2.min.js" charset="utf-8"></script>
