--- a/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
+++ b/Infinito-Qs/QuestionManagement/public/questionPaperModal.html
@@ -1,4 +1,4 @@
-<form id="editQuestionPaper" method="post" ng-submit="saveQuestionPaper()">
+<form id="editQuestionPaper" method="post" ng-submit="saveQuestionPaper()" ng-class="{'submitted': submitted}">
   <div class="modal-header">
     <button type="button" class="close" ng-click="editQuestionClose()" aria-hidden="true">&times;</button>
     <h4 class="modal-title">{{QuestionPaper.name}}</h4>
@@ -10,11 +10,10 @@
       <input type="hidden" id="lastEdited" name="lastEdited" value="{{selectedQuestion.lastEdited}}"/>
     </div>
   </div>
-  <div class="modal-body row">
-    <div class="col-lg-12">
+  <div id="#QuestionPaperModal" class="modal-body">
       <div class="form-group">
         <label for="QuestionPaperName">Name: </label><strong class="required text-danger">*</strong>
-        <input type="text" class="form-control" ng-model="QuestionPaper.name" value={{QuestionPaper.name}} required>
+        <input type="text" class="form-control" ng-model="QuestionPaper.name" value={{QuestionPaper.name}} oninvalid="this.setCustomValidity('Skadoosh! Name is Required')"  oninput="setCustomValidity('')" required>
       </input>
     </div>
 
@@ -56,13 +55,12 @@
           </tbody>
         </table>
       </div>
-    </div>
   </div>
 
   <div class="modal-footer">
     <button ng-show="selectedQuestionIndices.length > 0" type="button" class="btn btn-warning pull-left" ng-click="deleteQuestions()">Delete Questions</button>
     <button type="button" class="btn btn-default" ng-click="editQuestionClose()">Close</button>
-    <button type="submit" class="btn btn-primary">Save changes</button>
+    <button type="submit" ng-click="submitted= true;" class="btn btn-primary">Save changes</button>
   </div>
 
 </div>
