Pattern Validation Added

--- a/Infinito-Qs/QuestionManagement/public/QuestionPaperManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionPaperManager.html
@@ -1,7 +1,7 @@
 <main class="container">
   <div id="well questionContainer" class="row">
     <div ng-if="!QuestionPapers.length">
-      <h1>Sorry :'(. No Question Papers to display!</h1>
+      <h1>Sorry :'(. No Q-Set's to display!</h1>
     </div>
 
     <div class="well col-lg-12" ng-if="QuestionPapers.length">
