--- a/Infinito-Qs/QuestionManagement/public/QuestionManager.html
+++ b/Infinito-Qs/QuestionManagement/public/QuestionManager.html
@@ -433,17 +433,18 @@
           <h3 class="modal-title">Save this pattern</h3>
       </div>
       <div class="modal-body">
-        <form class="form-inline">
+        <form method="post" ng-submit="ok()" ng-class="{'submitted': submitted}" class="form-inline">
           <div class="form-group">
             <label for="patterName">Name: </label>
-            <input type="text" class="form-control" ng-model="patternName" required/>
+            <input type="text" class="form-control" ng-model="patternName" oninvalid="this.setCustomValidity('Skadoosh! Name is Required')"  oninput="setCustomValidity('')" required/>
+          </div>
+          <div class="modal-footer">
+              <button class="btn btn-primary" type="submit" ng-click="submitted= true;">OK</button>
+              <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
           </div>
         </form>
       </div>
-      <div class="modal-footer">
-          <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
-          <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
-      </div>
+
     </script>
 
     <!--Changes for search pattern ends-->
